packages/swc-plugin-workflow/transform/tests/errors/misspelled-step-directive/input.js
// This should error - misspelled directive
'use stepp';

export async function test() {
  return 42;
}
